--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <header>
     <h1>30 Days of Underrated HTML Tags</h1>
-    <p>HTML is more powerful than most developers realize.</p>
+    <p>Discover lesser-known HTML gems that can improve your accessibility, SEO, and code structure..</p>
     
     <button class="cta-button" onclick="document.getElementById('content').scrollIntoView({ behavior: 'smooth' })">Learn More →</button>
   </header>
